# access360-5-ways-to-visualize

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
docs/: backend-context.md  fleet-health-metrics.md  influx-mapping.md  iot-stack.md  mqtt-topics.md  sensors-and-gateways.md
methods/01-mqttx/: README.md  connection.json
methods/01-mqttx/sample-payloads/: dyn-batt-notify.json  dyn-temp-notify.json  dyn-vib-notify-lite.json  proc-checkin-notify.json  proc-reading-notify.json  rssi-notify.json
methods/02-iot-mqtt-panel/: README.md  iot-mqtt-panel-config.json
methods/03-grafana-live/: README.md
methods/03-grafana-live/dashboards/: fleet-health-live.json  fleet-health-readings.json
methods/03-grafana-live/deploy/: deploy.sh  gen_dashboard.py  gen_readings_dashboard.py
methods/03-grafana-live/normalizer/: flow.json
methods/03-grafana-live/provisioning/: datasource.yml
methods/04-node-red-fft-waterfall/: Dockerfile  README.md  docker-compose.yml  flow.json
methods/05-sensecap-indicator-d1l/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
methods/05-sensecap-indicator-d1l/main/: CMakeLists.txt  Kconfig.projbuild  fleet_state.c  fleet_state.h  idf_component.yml  main.c  mqtt_client_app.c  mqtt_client_app.h  time_sync.c  time_sync.h  wifi_sta.c  wifi_sta.h
methods/05-sensecap-indicator-d1l/main/bsp/: display.c  display.h
methods/05-sensecap-indicator-d1l/main/ui/: ui.c  ui.h  ui_internal.h  ui_screen_broker.c  ui_screen_power.c  ui_screen_sensors.c  ui_screen_sim.c
prometheus/: prometheus.yml
(+21 files in other folders)
